// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Should be correctly disabled 1`] = `
<button
  className="flame-button primary "
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span />
</button>
`;

exports[`Button Should be correctly enabled 1`] = `
<button
  className="flame-button primary "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span />
</button>
`;

exports[`Button Should render correctly 1`] = `
<button
  className="flame-button primary "
  onClick={[Function]}
  type="button"
>
  <span />
</button>
`;
